--- a/paper/markdown/figures_and_tables.Rmd
+++ b/paper/markdown/figures_and_tables.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Hyposmia as a standalone persistent symptom of long COVID"
-subtitle: "Figures and Tables"
+subtitle: "Methods, Results, Figures and Tables"
 author: "Health after COVID-19 in Tyrol study team"
 date: "`r format(Sys.time(), '%Y-%m-%d')`"
 
@@ -38,6 +38,66 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE, dev = "cai
 ```
 
 \newpage
+
+# Methods
+
+## Study design and approval
+
+Data generated in the 'Health After COVID-19 in Tyrol' (HACT, ClinicalTrials.gov: NCT04661462) online survey [@Sahanic2021; @Hufner2021] and in the longitudinal, multi-center cohort observation CovILD study 
+CovILD study (ClnicalTrials.gov: NCT04416100, acute COVID-19 and 60-, 100- and 180-day post-COVID-19 follow-up data) [@Sonnweber2021; @Sonnweber2020; @Rass2021] were re-analyzed in the current report. The studies were conducted in accordance with the Declaration of Helsinki and European Data Policy. The participant's data were analyzed in anonymized form. All participants gave digitally signed or written informed consent prior to enrollment. The study protocols were reviewed and approved by the institutional review boards of the Medical University of Innsbruck (HACT, Austria cohort, approval number: 1257/2020, CovILD: 1103/2020) and of the Autonomous Province of Bolzano - South Tyrol (HACT Italy cohort, approval number: 0150701).
+
+The HACT study encompassed two independently recruited cohorts of ambulatory COVID-19 convalescents in the Tyrol state in Austria and the South Tyrol province in Italy. The study exclusion criterion was hospitalization because of COVID-19. The study inclusion criteria were laboratory-confirmed SARS-CoV-2 infection (PCR or seropositivity), adult age (Austria: $\geq$ 16 years, Italy: $\geq$ 18 years) and residence in the study regions [@Sahanic2021; @Hufner2021]. The analysis inclusion criterion was a minimal observation time of 90 days between the positive SARS-CoV-2 test and the survey completion (__Figure \@ref(fig:fig-consort)__). A total of `r nrow(hyposmia$survey_at) + nrow(hyposmia$survey_it)` questionnaires was eligible for the current analysis (Austria: n = `r nrow(hyposmia$survey_at)`, Italy: `r nrow(hyposmia$survey_it)`).
+
+The CovILD cohort consists of longitudinally investigated multi-center collective of convalescents of ambulatory (WHO categories 1 - 3, n = `r unique(kinet$analysis_tbl$covild$A$ID) %>% length`), moderate (WHO categories 4 - 5, n = `r unique(kinet$analysis_tbl$covild$HM$ID) %>% length`) and severe COVID-19 (WHO categories 6 - 9, n = `r unique(kinet$analysis_tbl$covild$HS$ID) %>% length`) recruited at the Department of Internal Medicine II at the Medical University of Innsbruck (Austria), St. Vinzenz Hospital in Zams (Austria) and the acute rehabilitation facility in Muenster (Austria) (__Figure 1__) [@Sonnweber2021; @Sonnweber2020; @Rass2021].
+
+## Procedures and definitions
+
+In the HACT study, the duration classes of `r length(globals$symptoms)` symptoms of COVID-19 were surveyed ('absent', 'present for 1 - 3 days', 'present for up to 1 week', 'present for up to 2 weeks', 'present for up to 3 months', 'present for up to 6 months' or 'present for more than 6 months') and duration of individual symptoms was calculated [@Sahanic2021]. In the CovILD study, `r length(kinet$variables$covild[kinet$variables$covild != 'sympt_present'])` self-reported symptoms were surveyed at each follow-up visit [@Sonnweber2020]. For both studies, detailed characteristic of demography, socioeconomic status, medical history before COVID-19 as well as the disease course and recovery was recorded as described [@Sonnweber2021; @Sonnweber2020; @Rass2021; @Sahanic2021; @Hufner2021]. The full list of the variables available for the current analysis is provided in __Supplementary Table S1__.
+
+Self-reported symptoms were classified as acute when present for $\geq$ 14 days, persistent when present $\geq$ 28 days and long-term persistent complaints when lasting for $\geq$ 3 months post clinical onset (HACT) or present at the 100-day follow-up visit (CovILD). Numeric variables (symptoms, anti-SARS-CoV-2 S1/S2 antibody titers) were stratified by quartiles, laboratory parameters recorded during the CovILD visits were binarized with standard cutoffs as described [@Sonnweber2020; @Sonnweber2021; @Sahanic2021; @Hufner2021; @Rass2021]. Assessment of hyposmia by the sniffing stick test, lung CT imaging and lung function measurements were conducted as reported before [@Sonnweber2020; @Sonnweber2021; @Rass2021]. Details on study variables and their stratification are provided in __Supplementary Methods__ and __Supplementary Table S1__.
+
+## Statistical analysis
+
+Statistical analysis was performed with R 4.0.5 [@Wickham2019; @Wickham2016; @Wilke2019]. Statistical significance for differences in numeric variables between analysis groups as determined by Mann-Whitney U and Kruskal-Wallis test, as appropriate. Statistical significance for differences in frequency of categorical variables was assessed by $\chi^2$ test. Concordance between self-reported hyposmia and the results of sniffing stick test was measured with Cohen's $\kappa$ statistic [@Fleiss1969]. Overlap between symptoms was expressed as cosine similarity coefficient [@Drost2018]. Modeling of symptom resolution was accomplished by mixed-effect second-order logistic regression (random effect of the individual); model term and odds ratio estimate significances were assessed by likelihood ratio and Wald Z test, respectively [@Bates2015; @Kuznetsova2017; @Box1978]. Clustering of the HACT study participants in respect to long-term persistent symptoms was done with a combined self-organizing map and hierarchical clustering approach [@Kohonen1995; @Vesanto2000; @Vesanto1999; @Hufner2021]. Univariable modeling of long-term persistent hyposmia risk was done with a series of logistic regression models. In the HACT study, the risk models included age and sex weights and the stratified diagnosis - survey time as a confounder [@Sahanic2021; @Hufner2021]. Statistical testing results were corrected for multiple testing with Benjamini-Hochberg method [@Benjamini1995]. Details of the statistical analysis are provided in __Supplementary Methods__.
+
+# Data availability
+
+The study data is available at reasonable request to the corresponding authors. The source code of the R analysis pipeline is available at GitHub (https://github.com/PiotrTymoszuk/hyposmia_analsis_pipeline).
+
+\newpage
+
+# Results
+
+## Characteristic of the study collective
+
+## Post-COVID-19 hyposmia is a long-term persistent symptom
+
+In order to delineate the recovery kinetics, overlap of hyposmia and other COVID-19 symptoms and risk factors for delayed long-term post-COVID-19 olfactory disorders, we first re-analyzed data gathered in the population of ambulatory COVID-19 convalescents enrolled in the bi-national 'Health After COVID-19 in Tyrol' study (HACT) [@Sahanic2021; @Hufner2021]. 
+By means of mixed-effect logistic modeling of the recovery curves [@Box1978] for `r length(globals$symptoms)` COVID-19-related complaints (__Supplementary Table S2__) gauged by the online HACT survey [@Sahanic2021], we identified a set of symptoms characterized by a highly significant second-order time term suggestive of strong 'plateauing' effect and hence a substantial chronicity potential. This set of candidate chronic manifestations was highly consistent in both Austria and Italy HACT cohorts and included among others headache, muscle and joint pain, tiredness and fatigue as well as olfactory and taste disorders (__Figure \@ref(fig:fig-kinetic)A__, __Supplementary Figure S1__, __Supplementary Table S2__). Among them, tiredness, fatigue and self-reported hyposmia were the symptoms with the longest median recovery times (14 days) still present in at least 25% of the participants beyond 28 days post clinical onset (__Figure \@ref(fig:fig-kinetic)B__). Of note, whereas the duration of non-specific infection symptoms like fever or shivering in course of COVID-19 was virtually limited to the first two weeks of the disease (__Supplementary Figure S2__), fatigue, tiredness and taste disorders were still present in more than 10% the Austria or Italy HACT cohort 3 months post clinical onset (__Supplementary Figure S3__). Importantly, an analogically retarded recovery was observed for self-declared hyposmia in these collectives (__Figure \@ref(fig:fig-hyposmia-kinetic)A__).
+To explore, if a similar hyposmia kinetic may be observed in individuals hospitalized during acute COVID-19, we resorted to the longitudinally investigated CovILD cohort [@Sonnweber2020; @Sonnweber2021; @Rass2021]. Surprisingly, self-reported smell disorders displayed nearly complete resolution in the subset of severe COVID-19 survivors (WHO class 6 - 9) within 180 days post COVID-19 diagnosis. However, this disease symptom was still reported by 13 to 15% of ambulatory (WHO class 1 - 3) and moderate (WHO class 4 - 6) COVID-19 patients at the 180-day follow-up (__Figure \@ref(fig:fig-hyposmia-kinetic)B__). Hence, hyposmia persisting beyond the contraction of the non-specific acute infection and acute upper airway symptoms belongs to the complaints most frequently declared by ambulatory and moderate COVID-19 convalescents.
+
+## Sniffing stick test detected hyposmia is far more frequent than self-reported olfactory disorders
+
+
+Next, we sought to investigate the strike differences in self-perceived olfactory deficits between the survivors of severe, moderate and ambulatory COVID-19 in the CovILD cohort at the 100-day post-COVID-19 follow-up. As shown in __Supplementary Figure S4A__, the frequency of moderate-to-severe hyposmia defined by < 13 points in the 16-point sniffing stick test was way higher that the self-reported smell disorders. In particular, up to `r signif(hypo_kappa$proportions$hyposmia_mod_severe_V2$HS[1, 2], 3)*100`% of the severe COVID-19 survivors declaring no hyposmia, were affected by at least moderate olfactory impairment suggestive of a distorted symptom perception (__Supplementary Figure S4A__). Notably, the prevalence of severe hyposmia characterized by < 8 test points was detected only in a minute fraction of the participants (up to `r signif(sum(hypo_kappa$proportions$hyposmia_severe$HM[, 2]), 3)*100`% in the moderate COVID-19 subset, __Supplementary Figure S4B__). In general, the concordance between the test-detected moderate-to-severe long-term hyposmia and the self-perceived symptom was fair for the moderate ($\kappa$ = `r signif(hypo_kappa$kappa$hyposmia_mod_severe_V2$kappa$A$kappa[1], 3)`) and weak ($\kappa$ = `r signif(hypo_kappa$kappa$hyposmia_mod_severe_V2$kappa$HM$kappa[1], 3)`) for the severe COVID-19 convalescent subset [@Fleiss1969]. No statistically valid overlap was observed for the severe COVID-19 survivors ($\kappa$ = `r signif(hypo_kappa$kappa$hyposmia_mod_severe_V2$kappa$HS$kappa[1], 3)`) (__Supplementary Figure S4C__). Collectively, the true prevalence of hyposmia may be greatly underestimated by the patient's report, especially in severe COVID-19  
+
+## Limited co-occurrence of hyposmia and other persistent symptoms in long-term COVID-19 recovery
+
+
+As suggested by our previous report, isolated smell and/or taste disorders were sole long COVID symptoms in a substantial fraction of ambulatory COVID-19 convalescents [@Sahanic2021]. In acute COVID-19, self-reported hyposmia co-occurred with numerous other manifestations in the HACT study cohorts (20 of `r length(globals$symptoms)` symptoms with cosine similarity coefficient > 0.5) and in the CovILD study (ambulatory: 8, moderate: 6, severe: 5 symptoms of `r length(kinet$variables$covild[kinet$variables$covild != 'sympt_present'])` features surveyed with cosine similarity coefficient > 0.5) including non-specific infection symptoms such as fever, muscle and joint pain and fatigue or respiratory manifestations like tachy- and dyspnea (__Figure \@ref(fig:fig-hyposmia-overlap)__, __Supplementary Table S3__). However, in course of recovery, the association with the majority of symtoms with faster resolution kinetic (__Figure \@ref(fig:fig-kinetic)__, __Supplementary Figure S1__) was lost and solely self-reported taste disorders showed moderate co-occurrence (cosine similarity coefficient > 0.5) with self-reported hyposmia in the HACT cohort (__Figure \@ref(fig:fig-hyposmia-overlap)A__, Supplementary Figure S4A). In the ambulatory and moderate COVID-19 subsets of the CovILD study, such moderate association could by discerned only for dyspnea (ambulatory) and pain (moderate) at the 180-day follow-up (__Figure \@ref(fig:fig-hyposmia-overlap)B__, Supplementary Figure S4B). 
+
+Of interest, two other highly persistent symptoms frequently reported during the long-term COVID-19 recovery: fatigue and tiredness (__Figure \@ref(fig:fig-kinetic)__, __Supplementary Figure S1__ and __S3__ ) demonstrated only a weak-to-fair co-existence with self-reported hyposmia in the HACT (90-day Austria, fatigue: cosine similarity = `r hypo_overlap$distances$survey$survey_at %>% filter(time == 90, overlap_var == 'fatigue') %>% .$stat %>% signif(2)`, tiredness: `r hypo_overlap$distances$survey$survey_at %>% filter(time == 90, overlap_var == 'fatigue_day') %>% .$stat %>% signif(2)`, Italy, fatigue: cosine similarity = `r hypo_overlap$distances$survey$survey_it %>% filter(time == 90, overlap_var == 'fatigue') %>% .$stat %>% signif(2)`, tiredness: `r hypo_overlap$distances$survey$survey_it %>% filter(time == 90, overlap_var == 'fatigue_day') %>% .$stat %>% signif(2)`) and CovILD study (100-day follow-up, fatigue, ambulatory: cosine similarity = `r hypo_overlap$distances$covild$A %>% filter(time == 100, overlap_var == 'fatigue_sympt') %>% .$stat %>% signif(2)`, moderate: `r hypo_overlap$distances$covild$HM %>% filter(time == 100, overlap_var == 'fatigue_sympt') %>% .$stat %>% signif(2)`) (Supplementary Figure S4).
+
+To corroborate this hypothesis we resorted to an association analysis of the HACT participants with long-term persisting COVID-19 symptoms beyond 3 months post clinical disease onset in respect to the most frequent long COVID manifestations (present in at least 25% of the participants at $\geq$ 28 days post symptom onset: impaired concentration, tachypnea, hypogeusia, hyposmia, fatigue, tiredness and forgetfulness) (__Figure \@ref(fig:fig-kinetic)B__). By applying a combined self-organizing map and hierarchical clustering algorithm [@Kohonen1995; @Vesanto2000; @Hufner2021], three subsets of the participants could be discerned, further referred to as 'non-specific', 'hyposmia' and 'neuro/fatigue' clusters (__Figure \@ref(fig:fig-clustering)A__, __Supplementary Figure S5__). The hyposmia cluster comprising approximately one-third of the individuals affected by the highly protracted COVID-19 recovery (Austria: `r signif(pheno$n_numbers$survey_at$percent[2], 3)`%, Italy: `r signif(pheno$n_numbers$survey_it$percent[2], 3)`%) was characterized by a 100% prevalence and of self-reported hyposmia, approximately 60% frequency od taste disorders and, remarkably, by minimal occurrence of other symptoms (up to `r extract_counts(pheno$clust_ft$analyses$survey_it$fatigue_day)[4, 'percent'] %>% signif(3)`% for tiredness) (__Figure \@ref(fig:fig-clustering)B__). In summary, the results of the overlap and association analyses strongly suggest that in the late course of COVID-19 recovery, self-reported hyposmia may pose the sole protracted disease symptom occurring independently of post-COVID-19 fatigue, tiredness, memory and concentration deficits.
+
+## Male sex is associated with lower risk of persistent long-term hyposmia
+
+
+
+
+Finally, we intended to find demographic and clinical features identifiable during acute disease and early recovery which correlate with the risk of development of long-term persistent hyposmia present for 3 months or longer post clinical COVID-19 onset. By means of logistic risk modeling, hyposmia and taste disorders in the course of acute COVID-19 were identified as the strongest correlates of the long-term hyposmia risk (__Figure \@ref(fig:fig-risk)__). Furthermore, in the HACT study, highly poly-symptomatic acute disease (50 - 100^th^ symptom count percentile) was linked to a substantially higher protracted hyposmia risk. As demonstrated above (__Figure \@ref(fig:fig-hyposmia-kinetic)B__), severe acute COVID-19 was associated with an 80% lower risk of hyposmia present at the 100-day follow-up in the CovILD cohort, however, this effect was not significant when adjusted for multiple testing (__Figure \@ref(fig:fig-risk)A__). Of note, independently of the investigated study, male sex was a significant favorable co-variate associated with over 50% lower risk of long-term hyposmia (__Figure \@ref(fig:fig-risk)__).
+
+A more detailed investigation and modeling of recovery from post-COVID-19 hyposmia in female and male participants of the HACT study revealed no significant differences in pace of the resolution and comparable 'plateauing' effect between the sex strata in both the Austria and Italy cohort (__Supplementary Figure S7AB__). Furthermore, no differences in the median recovery time in females and males suffering from olfactory deficits during acute COVID-19 could be observed (__Supplementary Figure S7C__). Instead, the prevalence of hyposmia during acute COVID-19 was significantly higher in females than in males in both HACT cohorts ($\chi^2$ test; Austria, females: `r signif(kinet_sex$acute_covid$counts$survey_at$percent[1], 3)`%, males: `r signif(kinet_sex$acute_covid$counts$survey_at$percent[2], 3)`%, p = `r signif(kinet_sex$acute_covid$test$survey_at$p_value, 2)`; Italy, females: `r signif(kinet_sex$acute_covid$counts$survey_it$percent[1], 3)`%, males: `r signif(kinet_sex$acute_covid$counts$survey_it$percent[2], 3)`%, p = `r signif(kinet_sex$acute_covid$test$survey_it$p_value, 2)`) (__Supplementary Figure S7A__).
 
 # Tables {#sec:tbl}
 
